<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AjustesActivity">

    <Button
        android:id="@+id/btn_save"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:background="@drawable/bordespaq"
        android:backgroundTint="#f1c40f"
        android:text="@string/button_ajustes"
        android:textColor="#ecf0f1"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num_etpin"
        app:layout_constraintVertical_bias="0.14"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/tv_showpin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingrese_su_pin"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17" />

    <EditText
        android:id="@+id/num_etpin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="304dp"
        android:ems="10"
        android:hint="@string/ingresar_pin"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.422"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextFields" />


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/grup_chip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        app:layout_constraintBottom_toTopOf="@+id/num_etpin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_showpin">

        <com.google.android.material.chip.Chip

            style="@style/customChipStyle"
            android:id="@+id/chipclaro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_two" />

        <com.google.android.material.chip.Chip
            style="@style/customChipStyle"
            android:id="@+id/chiptigo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_one" />


    </com.google.android.material.chip.ChipGroup>
</androidx.constraintlayout.widget.ConstraintLayout>